@@ -497,7 +497,7 @@ sub Create {
            ),
          { label => N("Size in MB: "), val => \$mb_size, min => to_Mb(min_partition_size($hd)), max => to_Mb($def_size), 
 	   type => 'range', SpinButton => $::expert, changed => sub { $part->{start} = min($part->{start}, $max - $mb_size * 2048) } },
-         { label => N("Filesystem type: "), val => \$type_name, list => [ fs::type::type_names($::expert) ], 
+         { label => N("Filesystem type: "), val => \$type_name, list => [ fs::type::type_names($::expert, $hd) ], 
 	   sort => 0, if_($::expert, gtk => { wrap_width => 4 }) },
          { label => N("Mount point: "), val => \$part->{mntpoint}, list => [ fsedit::suggestions_mntpoint($all_hds), '' ],
            disabled => sub { my $p = fs::type::type_name2subpart($type_name); isSwap($p) || isNonMountable($p) }, type => 'combo', not_edit => 0,
@@ -584,7 +584,7 @@ sub Type {
     #- for ext2, warn after choosing as ext2->ext3 can be achieved without loosing any data :)
     $part->{fs_type} eq 'ext2' || $part->{fs_type} =~ /ntfs/ or $warn->() or return;
 
-    my @types = fs::type::type_names($::expert);
+    my @types = fs::type::type_names($::expert, $hd);
 
     #- when readonly, Type() is allowed only when changing {fs_type} but not {pt_type}
     #- eg: switching between ext2, ext3, reiserfs...
@@ -927,7 +927,7 @@ sub Loopback {
     $in->ask_from(N("Loopback"), '', [
 		  { label => N("Loopback file name: "), val => \$part->{loopback_file} },
 		  { label => N("Size in MB: "), val => \$mb_size, min => to_Mb($min), max => to_Mb($max), type => 'range', SpinButton => $::expert },
-		  { label => N("Filesystem type: "), val => \$type_name, list => [ fs::type::type_names($::expert) ], not_edit => !$::expert, sort => 0 },
+		  { label => N("Filesystem type: "), val => \$type_name, list => [ fs::type::type_names($::expert, $hd) ], not_edit => !$::expert, sort => 0 },
              ],
 	     complete => sub {
 		 $part->{loopback_file} or $in->ask_warn(N("Give a file name"), N("Give a file name")), return 1, 0;
