@@ -1,3 +1,7 @@
+- diskdrake:
+  o do not show partition types which have no associated filesystem
+    for LVM LV (#32326)
+
 Version 10.4.161 - 06 August 2007, by Thierry Vignaud
 
 - drakbug:
